k8-networking/helloworld-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 30007
  selector:
    app: helloworld
  type: LoadBalancer
