k8-networking/helloworld-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30007
  selector:
    app: helloworld
  type: NodePort
