k8-networking/helloworld-ingress-orignal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: helloworld.tanzudemo.frankcarta.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: helloworld
            port: 
              number: 8080
