k8-networking/helloworld-ingress-subdomain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: helloworld.tanzudemo.frankcarta.com
      http:
        paths:
          - backend:
              serviceName: helloworld
              servicePort: 8080
    - host: hello.helloworld.tanzudemo.frankcarta.com
      http:
        paths:
          - backend:
              serviceName: helloworld
              servicePort: 8080
