k8-networking/helloworld-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: helloworld.tanzudemo.frankcarta.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          serviceName: helloworld
